--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "**/.svn": true,
     "**/.hg": true,
     "**/.DS_Store": true,
-    "**/*.js.map": true
+    "**/*.js.map": true,
+	"src/**/*.js": true,
+	"node_modules": true
   }
 }
